--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="navbar-2">
             <ul>
                 <li><a href="#">HOME</a></li>
-                <li><a href="#">GALLERY</a></li>
+                <li><a href="./gallery/gallery.html">GALLERY</a></li>
                 <li><a href="#">EVENTS</a></li>
                 <li><a href="#">POSTS</a></li>
                 <li><a href="#">ABOUT US</a></li>
