--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -65,9 +65,84 @@
                     </div>
                 </div>
                 <div class="image">
-             
-                <div class="image">
-                 
+                    <img src="../asset/lake.jpg" alt="">
+                    <div class="image__social">
+                        <div class="links">
+                            <a href="#">
+                                <img src="../asset/brand-facebook-filled.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="../asset/brand-twitter-filled.png" alt="">
+                            </a>
+                            <a href="#">
+                                <img src="../asset/brand-instagram.png" alt="">
+                            </a>
+                        </div>
+                        <div class="image__text">
+                            <p>A nice looking image take by<br> <span>Mr Kalitoh</span></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="image__container">
+
+                    <div class="image">
+                        <img src="../asset/lake.jpg" alt="">
+                        <div class="image__social">
+                            <div class="links">
+                                <a href="#">
+                                    <img src="../asset/brand-facebook-filled.png" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../asset/brand-twitter-filled.png" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../asset/brand-instagram.png" alt="">
+                                </a>
+                            </div>
+                            <div class="image__text">
+                                <p>A nice looking image take by<br> <span>Mr Kalitoh</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <img src="../asset/lake.jpg" alt="">
+                        <div class="image__social">
+                            <div class="links">
+                                <a href="#">
+                                    <img src="../asset/brand-facebook-filled.png" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../asset/brand-twitter-filled.png" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../asset/brand-instagram.png" alt="">
+                                </a>
+                            </div>
+                            <div class="image__text">
+                                <p>A nice looking image take by<br> <span>Mr Kalitoh</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="image">
+                        <img src="../asset/lake.jpg" alt="">
+                        <div class="image__social">
+                            <div class="links">
+                                <a href="#">
+                                    <img src="../asset/brand-facebook-filled.png" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../asset/brand-twitter-filled.png" alt="">
+                                </a>
+                                <a href="#">
+                                    <img src="../asset/brand-instagram.png" alt="">
+                                </a>
+                            </div>
+                            <div class="image__text">
+                                <p>A nice looking image take by<br> <span>Mr Kalitoh</span></p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </aside>
             <div class="image__open">
@@ -80,17 +155,17 @@
                         corrupti neque vitae ipsum doloribus, ducimus dolores quo ea odit eaque tenetur sint. Omnis
                         alias, optio nihil labore rerum, minima ipsum adipisci itaque similique, enim ex esse facere non
                         laboriosam mollitia? Numquam error earum consequuntur facere.</p>
-                        <div class="social__links">
-                            <a href="#">
-                                <img src="../asset/brand-facebook-filled.png" alt="">
-                            </a>
-                            <a href="#">
-                                <img src="../asset/brand-twitter-filled.png" alt="">
-                            </a>
-                            <a href="#">
-                                <img src="../asset/brand-instagram.png" alt="">
-                            </a>
-                        </div>
+                    <div class="social__links">
+                        <a href="#">
+                            <img src="../asset/brand-facebook-filled.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="../asset/brand-twitter-filled.png" alt="">
+                        </a>
+                        <a href="#">
+                            <img src="../asset/brand-instagram.png" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
